example/kubernetes/using-cert-manager/ldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap
  labels:
    app: ldap
spec:
  selector:
    matchLabels:
      app: ldap
  replicas: 1
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
        - name: ldap
          image: osixia/openldap:1.5.0
          args: ["--copy-service"]
          volumeMounts:
            - name: ldap-data
              mountPath: /var/lib/ldap
            - name: ldap-config
              mountPath: /etc/ldap/slapd.d
            - name: kube-root-ca
              mountPath: "/container/service/slapd/assets/certs/ca.crt"
              subPath: ca.crt
            - name: ldap-tls
              mountPath: "/container/service/slapd/assets/certs/tls.crt"
              subPath: tls.crt
            - name: ldap-tls
              mountPath: "/container/service/slapd/assets/certs/tls.key"
              subPath: tls.key
          ports:
            - containerPort: 389
              name: ldap
            - containerPort: 636
              name: ldaps
      volumes:
        - name: ldap-data
          hostPath:
            path: "/data/ldap/db"
        - name: ldap-config
          hostPath:
            path: "/data/ldap/config"
        - name: kube-root-ca
          configMap:
            name: kube-root-ca.crt
        - name: ldap-tls
          secret:
            secretName: org-example-ldap-tls
