example/kubernetes/using-cert-manager/ldap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ldap
  name: ldap
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ldap.example.org
    secretName: org-example-ldap-tls
  rules:
  - host: "ldap.example.org"
